--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   provider: ^6.0.5
   numberpicker: ^2.1.2
-  # android_alarm_manager_plus: ^3.0.4
+  android_alarm_manager_plus: ^3.0.4
 
 dev_dependencies:
   flutter_test:
