--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   provider: ^6.0.5
   numberpicker: ^2.1.2
   android_alarm_manager_plus: ^3.0.4
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
