--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   numberpicker: ^2.1.2
   android_alarm_manager_plus: ^3.0.4
   intl: ^0.19.0
+  sqflite: ^2.3.2
+  path: ^1.8.3
 
 dev_dependencies:
   flutter_test:
